# snake

./: map.txt  snake.cabal
src/: Game.hs  GameMap.hs  Grid.hs  KeyHandler.hs  Main.hs  Positions.hs  Snake.hs  State.hs  Window.hs
tests/: Test.hs
