cabal-version:       2.2

name:                snake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/snake#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Window, KeyHandler, Game, Grid, Positions
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       gloss (==1.13.*),
                       random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable snake
  hs-source-dirs:      src
  other-modules:       Window, KeyHandler, Game, Grid, Positions
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       snake,
                       gloss (==1.13.*),
                       random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       QuickCheck,
                       snake,
                       random,
                       gloss
